# spanmatch

./: README.md  pyproject.toml
spanmatch/: __init__.py  cli.py  main.py  scoring.py  spanmatch.py
spanmatch/test/: test_main.py
