[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spanmatch"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Matching sets of multiple, potentially discontinuous spans."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas", "seaborn"]

[project.scripts]
spanmatch = "spanmatch.cli:main"

[project.urls]
"Homepage" = "https://github.com/mwestera/spanmatch"
"Bug Tracker" = "https://github.com/mwestera/spanmatch/issues"

